* Sat Apr 06 2019 Jim Anderson <thesemicolons@protonmail.com> - 8.2.2-0
- config.pp now managed /etc/audit in addition to /etc/audit/rules.d.
  The permissions and ownership of the two directories should be the
  same. Both directories use purge and recurse.

* Mon Mar 25 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 8.2.1-0
- Updated puppet template scope API from 3 to newer

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.2.1-0
- Use Puppet Integer in lieu of simplib's deprecated Puppet 3 to_integer

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.2.0-0
- Expanded the upper limit of the stdlib Puppet module version
- Updated a URL in the README.md

* Tue Jan 15 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0-0
- Allow users to optimize their audit processing by only collecting on specific
  SELinux types

* Fri Jan 11 2019 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.2.0-0
- Add restorecon audit for STIG profile

* Fri Nov 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0-0
- Update to remove potentially redundant test code and use the updated
  simp-beaker-helpers

* Thu Nov 15 2018 Mark Leary  <leary.mark@gmail.com> - 8.1.1-0
- Revert back to using the native service provider for the auditd service since
  puppet fixed the service handling.

* Wed Oct 31 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
- Allow users to opt-out of hooking the audit dispatchers into the SIMP rsyslog
  module using `auditd::config::audisp::syslog::rsyslog = false` or,
  alternatively, setting `simp_options::syslog = false`.
- Add a `write_logs` opttion to the `auditd_class` and multiplex between the
  `log_format = NOLOG` setting and `write_logs = false` since there were
  breaking changes in these settings after `auditd` version `2.6.0`.
- Add support for `log_format = ENHANCED` for `auditd` version >= `2.6.0`.
  Older versions will simply fall back to `RAW`.
